--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "components": "^0.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "redux": "^5.0.1",
     "styled": "^1.0.0",
