--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "styled": "^1.0.0",
     "styled-components": "^6.1.13",
     "use-sound": "^4.0.3"
